# sorge-dev-testing

./: README.md  pyproject.toml  sorge.toml
bot/: __init__.py  comment_poster.py  config.py  cpu_reviewer.py  decision_engine.py  diff_parser.py  gpu_runner.py  main.py  tui.py
bot/prompts/: review_template.txt  skip_template.txt
bot/runners/: __init__.py  base.py  gemini_runner.py  github_models_runner.py
bot/utils/: __init__.py  formatting.py  github_api.py  logging_utils.py
tests/: test.diff  test2.diff
