[tool.poetry]
name = "deepiri-sorge"
version = "0.1.0"
description = "Distributed, event-driven AI PR review bot - runs on GitHub Actions"
readme = "README.md"
license = "Apache-2.0"
authors = ["Deepiri <dev@deepiri.dev>"]
keywords = ["ai", "code-review", "github-actions", "llm", "github-bot"]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31.0"
PyYAML = ">=6.0.1"
toml = ">=0.10.2"
loguru = ">=0.7.2"
ghapi = ">=1.0.4"
pydantic = ">=2.5.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
python-dotenv = ">=1.0.0"
llama-cpp-python = { version = ">=0.2.0", optional = true }
rich = "^15.0.0"

[tool.poetry.extras]
llama = ["llama-cpp-python"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]
all = ["llama-cpp-python", "pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
mypy = ">=1.7.0"

[tool.poetry.scripts]
sorge = "bot.main:main"
sorge-review = "bot.main:review"
sorge-monitor = "bot.tui:main"

[[tool.poetry.packages]]
include = "bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "ISC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
